# email_auto_crewai

./: README.md  pyproject.toml  report.md
graphtutorial/: config.cfg
src/email_auto/: crew.py  main.py  models.py
src/email_auto/config/: agents.yaml  tasks.yaml
src/email_auto/tools/: custom_tool.py
