[project]
name = "email_auto"
version = "0.1.0"
description = "email_auto using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "msal",  # Microsoft Authentication Library
    "msgraph-core",

]

[project.scripts]
email_auto = "email_auto.main:run"
run_crew = "email_auto.main:run"
train = "email_auto.main:train"
replay = "email_auto.main:replay"
test = "email_auto.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
